Fixed footer on mobile (tablets)

--- a/assets/css/_globals/_mq.scss
+++ b/assets/css/_globals/_mq.scss
@@ -46,6 +46,18 @@
         }
     }
 
+    .footer_nav {
+        padding-left: 3rem;
+        padding-right: 3rem;
+
+        ul {
+            display: block;
+            list-style-type: none;
+            margin: 0 auto;
+            width: 100%;
+        }
+    }
+
     section.text {
         display: block;
     }
